Change header image width

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <h1>Titulo de la pagina</h1>
-        <img src="https://images.unsplash.com/photo-1722494285961-9bc4bb89ad93" alt="hojas de helecho">
+        <div class="image_container">
+            <img src="https://images.unsplash.com/photo-1722494285961-9bc4bb89ad93" alt="hojas de helecho">
+        </div>
     </header>
     <nav>
         <ul>
