--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header>
         <h1>Titulo de la pagina</h1>
         <div class="image_container">
+            <img src="https://images.unsplash.com/photo-1722809431349-cc97ef738eb3" alt="image_header">
+        </div>
+        <div class="image_container">
             <img src="https://images.unsplash.com/photo-1722494285961-9bc4bb89ad93" alt="hojas de helecho">
         </div>
     </header>
