Add news images

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
     <header>
         <h1>Titulo de la pagina</h1>
-        <div class="image_container">
-            <img src="https://images.unsplash.com/photo-1722809431349-cc97ef738eb3" alt="image_header">
-        </div>
+        <img class="img_suelta" src="https://images.unsplash.com/photo-1722809431357-9403c62c46dc" alt="header_img">
         <div class="image_container">
             <img src="https://images.unsplash.com/photo-1722494285961-9bc4bb89ad93" alt="hojas de helecho">
         </div>
